# gstMAVLinkCamera

./: camera_definition_server.py  definition_generator.py  main.py  mavlinkcamera.py  multiple_pipelines.py  pyproject.toml  readme.md  test.py
camera_definitions/: example.xml
